Fixed title text overlap with tree

--- a/Frontend/tree-planters/src/domain/Title/Title.css
+++ b/Frontend/tree-planters/src/domain/Title/Title.css
@@ -16,7 +16,7 @@
 
 #Subtitle {
 	position: absolute;
-	width: 30%;
+	width: 21%;
 	top: 77%;
 	left: 50%;
 	text-align: center;
